samples/_failures_safe/1761250043_3efd6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a2aef92.c: In function ‘main’:
./samples/SAFE/__tmp_8a2aef92.c:144:5: error: ‘init_analy’ undeclared (first use in this function); did you mean ‘init_analyzer’?
  144 |     init_analy
      |     ^~~~~~~~~~
      |     init_analyzer
./samples/SAFE/__tmp_8a2aef92.c:144:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8a2aef92.c:144:15: error: expected ‘;’ at end of input
  144 |     init_analy
      |               ^
      |               ;
./samples/SAFE/__tmp_8a2aef92.c:144:5: error: expected declaration or statement at end of input
  144 |     init_analy
      |     ^~~~~~~~~~
